--- a/arca.css
+++ b/arca.css
@@ -1,9 +1,6 @@
 /* GENERAL SLIDES */
 
-.remark-slide-content h1 {
-    font-size: 35px;
-    color: #9B0A14;
-}
+
 
 h2 {
     color: #9B0A14;
@@ -38,106 +35,7 @@ a, a > code {
   padding-right: 4em;
   font-size: 90%;
 }
-.remark-code-line-highlighted     { background-color: #ffff88; }
 
-.inverse {
-  background-color: #272822;
-  color: #d6d6d6;
-  text-shadow: 0 0 20px #333;
-}
-.inverse h1, .inverse h2, .inverse h3 {
-  color: #f3f3f3;
-}
-
-.hljs-github .hljs {
-    background: red;
-}
-
-/* Two-column layout */
-.left-column {
-  color: #777;
-  width: 20%;
-  height: 92%;
-  float: left;
-}
-.left-column h2:last-of-type, .left-column h3:last-child {
-  color: #000;
-}
-.right-column {
-  width: 75%;
-  float: right;
-  padding-top: 1em;
-}
-.pull-left {
-  float: left;
-  width: 47%;
-}
-.pull-right {
-  float: right;
-  width: 47%;
-}
-.pull-right + * {
-  clear: both;
-}
-img, video, iframe {
-  max-width: 100%;
-}
-blockquote {
-  border-left: solid 5px lightgray;
-  padding-left: 1em;
-}
-.remark-slide table {
-  margin: auto;
-  border-top: 1px solid #666;
-  border-bottom: 1px solid #666;
-}
-.remark-slide table thead th { border-bottom: 1px solid #ddd; }
-th, td { padding: 5px; }
-.remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) { background: #eee }
-
-@page { margin: 0; }
-@media print {
-  .remark-slide-scaler {
-    width: 100% !important;
-    height: 100% !important;
-    transform: scale(1) !important;
-    top: 0 !important;
-    left: 0 !important;
-  }
-}
-
-/*Inline code --*/
-
-/*-- In-line highlighting within text --*/
-.remark-code, .remark-inline-code {
-  font-size:          90%;
-  font-weight:        400;
-  color:              #231F20;
-  background:         #E8EDEE;
-  border-radius:      3px;
-  padding:            1px 1px 1px 1px;
-}
-
-.remark-code {
-    font-size: 60%;
-    display: block;
-    overflow-x: auto;
-    padding: .5em;
-    color: #333;
-    background: #f8f8f8;
-}
-
-
-/*  VIDEO SLIDES  (thanks to Andy Field  https://stackoverflow.com/questions/58381602/background-video-in-xaringan-slides) */
-
-#my_video {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  width: 100%;
-}
 
 /* SECTION SLIDE */
 
@@ -169,17 +67,22 @@ th, td { padding: 5px; }
   height: 140px !important;
 }
 
-
-/* force break between columns */
-
-<style>
-.forceBreak { -webkit-column-break-after: always; break-after: column; }
-</style>
-
 /* chpater pages */
 
 slides > slide.dark {
-  background-color: #C70039 !important;
+  background-color: #9B0A14 !important;
+}
+
+/* specify logo size on footer */
+slides > slide:not(.nobackground):before {
+  width: 92px;
+  height: 70px;
+  background-size: 85px 70px;
+
+/* code size*/
+
+code.r {
+  font-size: 22pt;
 }
 
 /* TITLE SLIDE */
