--- a/slides/01 - Baby Steps/arca.css
+++ b/slides/01 - Baby Steps/arca.css
@@ -9,13 +9,13 @@
   height: 140px !important;
 }
 
-/* specify logo size on footer */
+/* specify logo size on footer 
 slides > slide:not(.nobackground):before {
-  width: 12px;
+  width: 20px;
   height: 20px;
   background-size: 85px 70px;
 }
-
+*/
 
 
 /* GENERAL SLIDES */
